Adicionada aula de Operadores

--- a/notas/Fundamentos.ipynb
+++ b/notas/Fundamentos.ipynb
@@ -552,6 +552,86 @@
     "not False\n",
     "not not True"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7850d249",
+   "metadata": {},
+   "source": [
+    "# Operadores Ternários"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c031a9e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hoje estou com as roupas secas.\n",
+      "Hoje estou com as roupas secas.\n"
+     ]
+    }
+   ],
+   "source": [
+    "esta_chovendo = False\n",
+    "print(\"Hoje estou com as roupas \" + (\"secas.\", \"molhadas.\")[esta_chovendo])\n",
+    "print(\"Hoje estou com as roupas \" + (\"molhadas.\" if esta_chovendo else \"secas.\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3616dd8",
+   "metadata": {},
+   "source": [
+    "# Operadores de Membros/Identidade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c64a989c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# operador de membro\n",
+    "lista = [1, 2, 3, \"Ana\", \"Carla\"]\n",
+    "print(2 in lista)\n",
+    "print(\"Ana\" not in lista)\n",
+    "\n",
+    "# Operador de identidade\n",
+    "x = 3\n",
+    "y = x\n",
+    "z = 3\n",
+    "print(x is y)\n",
+    "print(y is z)\n",
+    "print(x is not z)\n",
+    "\n",
+    "lista_a = [1, 2, 3]\n",
+    "lista_b = lista_a\n",
+    "lista_c = [1, 2, 3]\n",
+    "print(lista_a is lista_b)\n",
+    "print(lista_b is lista_c)\n",
+    "print(lista_a is not lista_c)"
+   ]
   }
  ],
  "metadata": {
