--- a/notas/Fundamentos.ipynb
+++ b/notas/Fundamentos.ipynb
@@ -10,30 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d294bae0-f689-4623-9ece-43001e327f2b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "primeiro programa\n",
-      "Help on built-in function print in module builtins:\n",
-      "\n",
-      "print(...)\n",
-      "    print(value, ..., sep=' ', end='\\n', file=sys.stdout, flush=False)\n",
-      "    \n",
-      "    Prints the values to a stream, or to sys.stdout by default.\n",
-      "    Optional keyword arguments:\n",
-      "    file:  a file-like object (stream); defaults to the current sys.stdout.\n",
-      "    sep:   string inserted between values, default a space.\n",
-      "    end:   string appended after the last value, default a newline.\n",
-      "    flush: whether to forcibly flush the stream.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"primeiro programa\")\n",
     "1 \\\n",
@@ -44,21 +24,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "eb84a09a-ce73-4ff0-a11b-20acfd4f2e2e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "1 + 2 + 3\n",
     "4 + 5 + 6"
@@ -66,19 +35,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c5a77cc4-4083-4731-a540-e5008156190d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n",
-      "15\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(1 + 2 + 3)\n",
     "print(4 + 5 + 6)"
@@ -94,26 +54,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "844404e2-ba5f-4212-8c87-1f0a20173762",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "False\n",
-      "2.2\n",
-      "Aqui falo a minha lingua!\n",
-      "Tb funciona.\n",
-      "Você é muito muito muito Legal!\n",
-      "[1, 2, 3]\n",
-      "{'nome': 'João', ' Idade': 21}\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(True)\n",
     "print(False) # bool\n",
@@ -137,19 +81,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b6d81f80",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15.2\n",
-      "Agora sou uma string\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 10 # uma atribuição com = / int \n",
     "b = 5.2 # real - flaot\n",
@@ -170,19 +105,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "9fc31bc6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "994.25\n",
-      "Agora sim o fim de verdade\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Minhas variáveis\n",
     "salario = 3450.45\n",
@@ -216,25 +142,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1f980f97",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n",
-      "-3\n",
-      "10.6\n",
-      "3.1333333333333333\n",
-      "3.0\n",
-      "256\n",
-      "1\n",
-      "24\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# São conhecidos como binários\n",
     "# 2 Operandos para a operação\n",
@@ -263,18 +174,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ba0fb322",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "71.18491790925822\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Minhas variáveis\n",
     "salario = 3450.45\n",
@@ -295,21 +198,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "bc5129eb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Relacionais -> True or False\n",
     "# Junção de operadores para deixar mais complexo\n",
@@ -333,25 +225,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "206390c9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "15\n",
-      "12\n",
-      "24\n",
-      "6.0\n",
-      "2.0\n",
-      "256.0\n",
-      "1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 3 # Rotulação/Atribuição\n",
     "a = a + 7 # Acrescentar\n",
@@ -384,21 +261,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "5c37dc22",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "True or False\n",
     "7 != 3 and 2 > 3\n",
@@ -478,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "id": "6d16c3fc",
    "metadata": {},
    "outputs": [
@@ -520,21 +386,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "80fe2036",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 3\n",
     "# a++\n",
@@ -563,19 +418,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c031a9e6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hoje estou com as roupas secas.\n",
-      "Hoje estou com as roupas secas.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "esta_chovendo = False\n",
     "print(\"Hoje estou com as roupas \" + (\"secas.\", \"molhadas.\")[esta_chovendo])\n",
@@ -592,25 +438,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "c64a989c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "False\n",
-      "True\n",
-      "True\n",
-      "False\n",
-      "True\n",
-      "False\n",
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# operador de membro\n",
     "lista = [1, 2, 3, \"Ana\", \"Carla\"]\n",
@@ -631,6 +462,203 @@
     "print(lista_a is lista_b)\n",
     "print(lista_b is lista_c)\n",
     "print(lista_a is not lista_c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "139370df",
+   "metadata": {},
+   "source": [
+    "# Builtins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a8144883",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.3333333333333335\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['In',\n",
+       " 'Out',\n",
+       " '_',\n",
+       " '_1',\n",
+       " '_10',\n",
+       " '_11',\n",
+       " '_12',\n",
+       " '_15',\n",
+       " '_17',\n",
+       " '_18',\n",
+       " '_19',\n",
+       " '_4',\n",
+       " '_5',\n",
+       " '_6',\n",
+       " '_7',\n",
+       " '_9',\n",
+       " '__',\n",
+       " '___',\n",
+       " '__builtin__',\n",
+       " '__builtins__',\n",
+       " '__doc__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " '__vsc_ipynb_file__',\n",
+       " '_dh',\n",
+       " '_i',\n",
+       " '_i1',\n",
+       " '_i10',\n",
+       " '_i11',\n",
+       " '_i12',\n",
+       " '_i13',\n",
+       " '_i14',\n",
+       " '_i15',\n",
+       " '_i16',\n",
+       " '_i17',\n",
+       " '_i18',\n",
+       " '_i19',\n",
+       " '_i2',\n",
+       " '_i20',\n",
+       " '_i3',\n",
+       " '_i4',\n",
+       " '_i5',\n",
+       " '_i6',\n",
+       " '_i7',\n",
+       " '_i8',\n",
+       " '_i9',\n",
+       " '_ih',\n",
+       " '_ii',\n",
+       " '_iii',\n",
+       " '_oh',\n",
+       " 'a',\n",
+       " 'exit',\n",
+       " 'get_ipython',\n",
+       " 'mais_saudavel',\n",
+       " 'math',\n",
+       " 'nome',\n",
+       " 'os',\n",
+       " 'quit',\n",
+       " 'sorvete',\n",
+       " 'sys',\n",
+       " 'trabalho_quinta',\n",
+       " 'trabalho_terca',\n",
+       " 'tv_32',\n",
+       " 'tv_50']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(1)\n",
+    "# Importado no escopo global\n",
+    "#  Nunca interferir em __builtins__\n",
+    "__builtins__.type(\"Fala Galéra\")\n",
+    "__builtins__.print(10 / 3)\n",
+    "\n",
+    "# __builtins__.help(__builtins__.dir)\n",
+    "# dir()\n",
+    "\n",
+    "# a = 7\n",
+    "# import math\n",
+    "# dir(__builtins__)\n",
+    "nome = \"John doe\"\n",
+    "type(nome)\n",
+    "__builtins__.len(nome)\n",
+    "\n",
+    "dir()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2989215a",
+   "metadata": {},
+   "source": [
+    "# Conversão de Tipos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "8655ca7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'str'>\n",
+      "5\n",
+      "23\n",
+      "5.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "2 + 3\n",
+    "# print(2 + \"3\")\n",
+    "a = 2\n",
+    "b = \"3\"\n",
+    "\n",
+    "print(type(a)) # <class 'int'>\n",
+    "print(type(b)) # <class 'str'>\n",
+    "print(a + int(b)) # str to int\n",
+    "print(str(a) + b) # int to str\n",
+    "\n",
+    "# print(2 + int(\"2 legal\")) # operação inválida\n",
+    "# print(2 + int(\"3.4\")) # operação inválida\n",
+    "\n",
+    "print(2 + float(\"3.4\")) # str to float"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "253da7d3",
+   "metadata": {},
+   "source": [
+    "# Coerção Automática"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "7e563ecf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10 / 2 # resultado de uma divisão é sempre floa no Python\n",
+    "type(10 / 2)\n",
+    "10 / 3\n",
+    "10 // 3 # Divisão inteira\n",
+    "10 // 3.3 # Divisão float\n",
+    "type(10 // 3.3)\n",
+    "10 / 2.5\n",
+    "2 + True # 3 + True(1)\n",
+    "2 + False # 2 + False(0)"
    ]
   }
  ],
