--- a/notas/Fundamentos.ipynb
+++ b/notas/Fundamentos.ipynb
@@ -660,11 +660,72 @@
     "2 + True # 3 + True(1)\n",
     "2 + False # 2 + False(0)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1697a883",
+   "metadata": {},
+   "source": [
+    "# Tipos Núméricos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7b65f71",
+   "metadata": {},
+   "source": [
+    "## Números #01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "021b0632",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n",
+      "7.5\n",
+      "12.5\n",
+      "<class 'int'> <class 'float'>\n",
+      "False True\n",
+      "5\n",
+      "5\n",
+      "2\n",
+      "2\n",
+      "3.6\n",
+      "3.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(dir(int), dir(float))\n",
+    "# int & float\n",
+    "a = 5\n",
+    "b = 2.5\n",
+    "print(a / b)\n",
+    "print(a + b)\n",
+    "print(a * b)\n",
+    "\n",
+    "print(type(a), type(b))\n",
+    "print(b.is_integer(), 5.0.is_integer())  # Verify if is integer or float\n",
+    "# Internal Functions by int\n",
+    "print(int.__add__(2, 3))\n",
+    "print(2 + 3)\n",
+    "print((-2).__abs__())\n",
+    "print((-3.6).__abs__())\n",
+    "# Functions int\n",
+    "print(abs(-2))\n",
+    "print(abs(-3.6))"
+   ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "238dbe39b9d96001f9fa651485e3607eb6ae1656f00bf0f113936ac25b3cf8ba"
+   "hash": "b9a6f1b1b4debffda254a5a32f33ca062fcf244d2676d9923c02cd3a268d8fef"
   },
   "kernelspec": {
    "display_name": "Python 3.9.12 ('base')",
