Added strings unit

--- a/notas/Fundamentos.ipynb
+++ b/notas/Fundamentos.ipynb
@@ -10,10 +10,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d294bae0-f689-4623-9ece-43001e327f2b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "primeiro programa\n",
+      "Help on built-in function print in module builtins:\n",
+      "\n",
+      "print(...)\n",
+      "    print(value, ..., sep=' ', end='\\n', file=sys.stdout, flush=False)\n",
+      "    \n",
+      "    Prints the values to a stream, or to sys.stdout by default.\n",
+      "    Optional keyword arguments:\n",
+      "    file:  a file-like object (stream); defaults to the current sys.stdout.\n",
+      "    sep:   string inserted between values, default a space.\n",
+      "    end:   string appended after the last value, default a newline.\n",
+      "    flush: whether to forcibly flush the stream.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"primeiro programa\")\n",
     "1 \\\n",
@@ -764,11 +784,110 @@
     "print(dir(decimal))\n",
     "print(dir())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "601131d9",
+   "metadata": {},
+   "source": [
+    "# Tipo String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "10fa4112",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saulo Pedro\n",
+      "S\n",
+      "True\n",
+      "Texto Entre Apostrofos pode ter \"aspas\".\n",
+      "Texto com multiplas\n",
+      "...\tlinhas\n",
+      " Texto com multiplas\n",
+      "...\tlinhas\n",
+      "\n",
+      " Também é possível com\n",
+      "aspas simples\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(dir(str))\n",
+    "nome = \"Saulo Pedro\"\n",
+    "print(nome)\n",
+    "print(nome[0])\n",
+    "# nome[0] = \"P\" # TypeError -> String é imutável\n",
+    "# 'marca d'agua' -> Erro de Sintaxe \n",
+    "print('Dias D\\'Avila' == 'Dias D\\'Avila') # para texto com aspas simples dentro de aspas simples use \\ -> para fazer parte do texto\n",
+    "# print(\"Teste \\\" Teste\")\n",
+    "texto = 'Texto Entre Apostrofos pode ter \"aspas\".'\n",
+    "print(texto)\n",
+    "\n",
+    "doc = \"\"\" Texto com multiplas\n",
+    "...\\tlinhas\n",
+    "\"\"\"\n",
+    "\n",
+    "print(\"Texto com multiplas\\n...\\tlinhas\")\n",
+    "print(doc)\n",
+    "\n",
+    "doc2 = ''' Também é possível com\n",
+    "aspas simples\n",
+    "'''\n",
+    "print(doc2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "1e1c5cc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J\n",
+      "o\n",
+      "i\n",
+      " Gabriel\n",
+      "riel\n",
+      "João\n",
+      "João \n",
+      "leirbaG oãoJ\n",
+      "02468\n",
+      "13579\n",
+      "9876543210\n"
+     ]
+    }
+   ],
+   "source": [
+    "nome = \"João Gabriel\"\n",
+    "print(nome[0])\n",
+    "print(nome[1])\n",
+    "print(nome[-3])\n",
+    "print(nome[4:])\n",
+    "print(nome[-4:])\n",
+    "print(nome[:4])\n",
+    "print(nome[0:5])\n",
+    "print(nome[::-1]) # inverter\n",
+    "\n",
+    "numeros = '0123456789'\n",
+    "print(numeros[::2])\n",
+    "print(numeros[1::2])\n",
+    "print(numeros[::-1])"
+   ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "46b936ff1622c326d442b837a2b71fa5dbcf20e52e3a75b5ec5a0d8bfc7f438d"
+   "hash": "b9a6f1b1b4debffda254a5a32f33ca062fcf244d2676d9923c02cd3a268d8fef"
   },
   "kernelspec": {
    "display_name": "Python 3.9.12 ('base')",
