Added strings #01, #02, #03 and #04

--- a/notas/Fundamentos.ipynb
+++ b/notas/Fundamentos.ipynb
@@ -883,6 +883,78 @@
     "print(numeros[1::2])\n",
     "print(numeros[::-1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "963e7492",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "32\n",
+      "python é uma linguagem excelente\n",
+      "PYTHON É UMA LINGUAGEM EXCELENTE\n",
+      "['Python', 'é', 'uma', 'linguagem', 'excelente']\n",
+      "['Python é uma linguag', 'm ', 'xc', 'l', 'nt', '']\n",
+      "['__add__', '__class__', '__contains__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getnewargs__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__iter__', '__le__', '__len__', '__lt__', '__mod__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__rmod__', '__rmul__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', 'capitalize', 'casefold', 'center', 'count', 'encode', 'endswith', 'expandtabs', 'find', 'format', 'format_map', 'index', 'isalnum', 'isalpha', 'isascii', 'isdecimal', 'isdigit', 'isidentifier', 'islower', 'isnumeric', 'isprintable', 'isspace', 'istitle', 'isupper', 'join', 'ljust', 'lower', 'lstrip', 'maketrans', 'partition', 'removeprefix', 'removesuffix', 'replace', 'rfind', 'rindex', 'rjust', 'rpartition', 'rsplit', 'rstrip', 'split', 'splitlines', 'startswith', 'strip', 'swapcase', 'title', 'translate', 'upper', 'zfill']\n",
+      "Help on method_descriptor:\n",
+      "\n",
+      "center(self, width, fillchar=' ', /)\n",
+      "    Return a centered string of length width.\n",
+      "    \n",
+      "    Padding is done using the specified fill character (default is a space).\n",
+      "\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "frase = \"Python é uma linguagem excelente\"\n",
+    "print(\"py\" not in frase)\n",
+    "print(\"ing\" in frase)\n",
+    "print(len(frase))\n",
+    "print(frase.lower())\n",
+    "print(frase.upper())\n",
+    "print(frase.split())\n",
+    "print(frase.split(\"e\"))\n",
+    "print(dir(str))\n",
+    "print(help(str.center))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "25591d64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123 de Oliveira 4\n",
+      "['__add__', '__class__', '__contains__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getnewargs__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__iter__', '__le__', '__len__', '__lt__', '__mod__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__rmod__', '__rmul__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', 'capitalize', 'casefold', 'center', 'count', 'encode', 'endswith', 'expandtabs', 'find', 'format', 'format_map', 'index', 'isalnum', 'isalpha', 'isascii', 'isdecimal', 'isdigit', 'isidentifier', 'islower', 'isnumeric', 'isprintable', 'isspace', 'istitle', 'isupper', 'join', 'ljust', 'lower', 'lstrip', 'maketrans', 'partition', 'removeprefix', 'removesuffix', 'replace', 'rfind', 'rindex', 'rjust', 'rpartition', 'rsplit', 'rstrip', 'split', 'splitlines', 'startswith', 'strip', 'swapcase', 'title', 'translate', 'upper', 'zfill']\n",
+      "3\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"123\"\n",
+    "b = \" de Oliveira 4\"\n",
+    "# print(a.__add__(b)) -> (+) magic method\n",
+    "# print(str.__add__(a, b))\n",
+    "print(a + b)\n",
+    "print(dir(str))\n",
+    "# print(a.__len__())\n",
+    "print(len(a))\n",
+    "# print(a.__contains__(\"2\"))\n",
+    "print(\"2\" in a)"
+   ]
   }
  ],
  "metadata": {
