--- a/notas/Fundamentos.ipynb
+++ b/notas/Fundamentos.ipynb
@@ -955,11 +955,123 @@
     "# print(a.__contains__(\"2\"))\n",
     "print(\"2\" in a)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff768377",
+   "metadata": {},
+   "source": [
+    "# Lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6eb452b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "0\n",
+      "2\n",
+      "[1, 2, 'João', 'Gabriel']\n",
+      "[2, 'João', 'Gabriel']\n",
+      "['Gabriel', 'João', 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = [] # mutável -> sequência\n",
+    "print(type(lista))\n",
+    "# print(dir(lista))\n",
+    "print(len(lista))\n",
+    "lista.append(1)\n",
+    "lista.append(2)\n",
+    "print(len(lista))\n",
+    "\n",
+    "nova_lista = [1, 2, \"João\", \"Gabriel\"] # Não é boa prática misturar tipos em lista\n",
+    "print(nova_lista)\n",
+    "nova_lista.remove(1) # removendo elemento 1\n",
+    "print(nova_lista)\n",
+    "nova_lista.reverse() # reverter ordem da lista\n",
+    "print(nova_lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c52a2690",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gabriel\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "3.1415\n",
+      "Gabriel\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = [1, 2, \"João\", \"Gabriel\", 3.1415]\n",
+    "# print(lista[\"Gabriel\"]) -> TypeError -> list indices must be integers or slices, not str\n",
+    "print(lista[3]) \n",
+    "print(2 in lista)\n",
+    "print(\"João\" in lista)\n",
+    "print(\"Tobias\" in lista)\n",
+    "# print(lista[5]) -> TypeError -> out of range\n",
+    "print(lista[-1])\n",
+    "print(lista[-2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "0a5a672f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Joel', 'Lucas']\n",
+      "['Joel', 'Lucas', 'João']\n",
+      "['Joel', 'Lucas', 'João', 'Guilherme']\n",
+      "['Tobias', 'Joel', 'Lucas', 'João']\n",
+      "['Tobias', 'Joel', 'Lucas', 'João', 'Guilherme']\n",
+      "['Tobias', 'Lucas', 'Guilherme']\n",
+      "['Guilherme', 'João', 'Lucas', 'Joel', 'Tobias']\n",
+      "['Tobias', 'Lucas', 'João', 'Guilherme']\n",
+      "['Tobias']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = [\"Tobias\", \"Joel\", \"Lucas\", \"João\", \"Guilherme\"]\n",
+    "print(lista[1:3])\n",
+    "print(lista[1:-1])\n",
+    "print(lista[1:])\n",
+    "print(lista[:-1])\n",
+    "print(lista[:])\n",
+    "print(lista[::2])\n",
+    "print(lista[::-1])\n",
+    "del lista[1]\n",
+    "print(lista)\n",
+    "del lista [1:]\n",
+    "print(lista)"
+   ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "b9a6f1b1b4debffda254a5a32f33ca062fcf244d2676d9923c02cd3a268d8fef"
+   "hash": "87f573d1f2fff299835482f18f98c9432c63cc02e9ff89b9b971714c103ee23a"
   },
   "kernelspec": {
    "display_name": "Python 3.9.12 ('base')",
