Added Tuples & Dicts

--- a/notas/Fundamentos.ipynb
+++ b/notas/Fundamentos.ipynb
@@ -1067,6 +1067,132 @@
     "del lista [1:]\n",
     "print(lista)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f9a4c3b",
+   "metadata": {},
+   "source": [
+    "# Tuplas\n",
+    "- Não pode ser modificada;\n",
+    "- Não pode adicionar, excluir ou editar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "291a3d8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'tuple'>\n",
+      "Vermelho\n",
+      "Azul\n",
+      "('Verde', 'Azul', 'Laranja', 'Azul')\n",
+      "3\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "tupla = tuple()\n",
+    "tupla = () # Declarar tupla\n",
+    "tupla = (\"Hello\") # Expreção de declaração de string -> Não é um indice na tupla\n",
+    "print(type(tupla))\n",
+    "tupla = (\"World\", ) # Elemento declarado em uma tupla\n",
+    "# print(dir(tuple)) -> Métodos de tuple\n",
+    "# print(help(tuple)) -> Ajuda\n",
+    "print(type(tupla))\n",
+    "# tupla[0] = \"Hello World\" -> TypeError -> tuple' object does not support item assignment\n",
+    "cores = (\"Vermelho\", \"Verde\", \"Azul\", \"Laranja\", \"Azul\")\n",
+    "print(cores[0])\n",
+    "print(cores[-1])\n",
+    "print(cores[1:])\n",
+    "\n",
+    "print(cores.index(\"Laranja\"))\n",
+    "print(cores.count(\"Azul\"))\n",
+    "print(len(cores))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a200937b",
+   "metadata": {},
+   "source": [
+    "# Dicionários\n",
+    "\n",
+    "- Estruturas Chave e Valor;\n",
+    "- Indexada com String ou Outros Tipos;\n",
+    "- De Regra chave é string. Mas podemos usar outros valores."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "47a28044",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "João Gabriel\n",
+      "21\n",
+      "('Python', 'Web Moderno', 'Informática')\n",
+      "dict_keys(['nome', 'idade', 'cursos'])\n",
+      "dict_values(['João Gabriel', 21, ('Python', 'Web Moderno', 'Informática')])\n",
+      "dict_items([('nome', 'João Gabriel'), ('idade', 21), ('cursos', ('Python', 'Web Moderno', 'Informática'))])\n",
+      "21\n",
+      "None\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "pessoa = {\"nome\": \"João Gabriel\", \"idade\": 21, \"cursos\": (\"Python\", \"Web Moderno\", \"Informática\")}\n",
+    "# print(type(pessoa))\n",
+    "# print(dir(dict))\n",
+    "\n",
+    "print(len(pessoa))\n",
+    "print(pessoa[\"nome\"])\n",
+    "print(pessoa[\"idade\"])\n",
+    "print(pessoa[\"cursos\"])\n",
+    "print(pessoa.keys())\n",
+    "print(pessoa.values())\n",
+    "print(pessoa.items())\n",
+    "print(pessoa.get(\"idade\"))\n",
+    "print(pessoa.get(\"tag\"))\n",
+    "print(pessoa.get(\"tag\", []))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7de30114",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b21d52e0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ccede32d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
