--- a/notas/Fundamentos.ipynb
+++ b/notas/Fundamentos.ipynb
@@ -1172,27 +1172,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7de30114",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'nome': 'João Gabriel', 'idade': 22, 'cursos': ['Python', 'Web Moderno', 'Informática', 'Scala']}\n",
+      "{'nome': 'João Gabriel', 'cursos': ['Python', 'Web Moderno', 'Informática', 'Scala']}\n",
+      "{'nome': 'João Gabriel', 'cursos': ['Python', 'Web Moderno', 'Informática', 'Scala'], 'idade': 22, 'sexo': 'M'}\n",
+      "{'nome': 'João Gabriel', 'idade': 22, 'sexo': 'M'}\n",
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "pessoa = {\"nome\": \"João Gabriel\", \"idade\": 21, \"cursos\": [\"Python\", \"Web Moderno\", \"Informática\"]}\n",
+    "pessoa[\"idade\"] = 22\n",
+    "pessoa[\"cursos\"].append(\"Scala\")\n",
+    "print(pessoa)\n",
+    "pessoa.pop(\"idade\")\n",
+    "print(pessoa)\n",
+    "pessoa.update({\"idade\": 22, \"sexo\": \"M\"})\n",
+    "print(pessoa)\n",
+    "del pessoa[\"cursos\"]\n",
+    "print(pessoa)\n",
+    "pessoa.clear()\n",
+    "print(pessoa)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ce730f1",
+   "metadata": {},
+   "source": [
+    "# Conjuntos\n",
+    "- Não Garante Orgem;\n",
+    "- Não é Indexado;\n",
+    "- Não aceita repetição;\n",
+    "- Não Garante ordenação"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b21d52e0",
+   "execution_count": 24,
+   "id": "73ed53a3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'o', 'j', 'a'}\n",
+      "True True\n",
+      "True\n",
+      "{1, 2, 3, 4}\n",
+      "set()\n",
+      "False\n",
+      "False\n",
+      "{1, 2, 3}\n",
+      "{1, 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {1, 2, 3, 4} # conjunto\n",
+    "# a[0] -> TypeError: 'set' object is not subscriptable\n",
+    "a = set(\"jooooaoooo\")\n",
+    "print(a)\n",
+    "print(\"a\" in a, \"J\" not in a)\n",
+    "print({1, 2, 3, 4} == {4, 4, 1, 2, 3}) # True\n",
+    "\n",
+    "# operações\n",
+    "c1 = {1, 2}\n",
+    "c2 = {3, 4}\n",
+    "print(c1.union(c2))\n",
+    "print(c1.intersection(c2))\n",
+    "# c1.update(c2)\n",
+    "print(c2 <= c1)\n",
+    "print(c1 >= c2)\n",
+    "# print({1, 2, 3, 4} + {4}) -> TypeError: unsupported operand type(s) for +: 'set' and 'set' \n",
+    "print({1, 2, 3, 4} - {4}) \n",
+    "c1 -= c2\n",
+    "print(c1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "079155fc",
+   "metadata": {},
+   "source": [
+    "# Interpolação\n",
+    "- 4 Formas Diferentes;\n",
+    "- Substituir valores dentro da string."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ccede32d",
+   "execution_count": 40,
+   "id": "6edfc22d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nome: João, Idade: 21\n",
+      "Nome: João, Idade: 21 257\n",
+      "Nome: João, Idade: 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "from string import Template\n",
+    "nome, idade = \"João\", 21\n",
+    "# print(\"nome: %s, idade: %d\" % (nome, idade)) -> mais antiga, menos recomendada\n",
+    "print(\"Nome: {0}, Idade: {1}\".format(nome, idade)) # Recomandado - < 3.6\n",
+    "print(f\"Nome: {nome}, Idade: {idade} {2 ** 8 + 1}\") # 3.6\n",
+    "\n",
+    "s = Template(\"Nome: $nome, Idade: $idade\")\n",
+    "print(s.substitute(nome=nome, idade=idade))"
+   ]
   }
  ],
  "metadata": {
